--- a/assets/css/stristo.css
+++ b/assets/css/stristo.css
@@ -2,11 +2,22 @@ body {
     background-color: #333;
 }
 
+h1 {
+    color: #ddd;
+    font-size: 4.5em;
+}
+
 .site-wrapper {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+}
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .logo-wrapper {
